add route, view for checkout
co-authored-by: Hannah Beinstein <hannah.beinstein@gmail.com>
Co-Authored-By: Cody Fritz <clanalia55@gmail.com>

--- a/PackageDelivery/Views/Parcel/Index.cshtml
+++ b/PackageDelivery/Views/Parcel/Index.cshtml
@@ -1,4 +1,4 @@
-<form action="/results" method="post">
+<form action="/checkout" method="post">
   <label for="length">Enter your package length:</label>
   <input id="length" name="length" type="text">
   <label for="width">Enter your package width:</label>
