--- a/PackageDelivery/Views/Parcel/Checkout.cshtml
+++ b/PackageDelivery/Views/Parcel/Checkout.cshtml
@@ -1,10 +1,14 @@
-@using PackageDelivery.Models;
+@* @using PackageDelivery.Models; *@
 
 <h1> Here is your delivery estimate (lowest price GUARANTEED)</h1>
-
-@if (Model.Count == 0)
+@* @Model == newParcel *@
+@* @if (Model.Count == 0)
 {
   <p> You have not entered any dimensions, please go back and fix this.</p>
-}
+} *@
+@* @foreach (var parcel in Model)
+{
 
-<p> Your estimate is: $ </p>
+} *@
+
+<p> Your estimate is: $ @Model.findPrice(Model.findVolume())</p>
